--- a/index.html
+++ b/index.html
@@ -7,9 +7,33 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="content">
-      <header></header>
-      <main></main>
+    <div class="page">
+      <header>
+        <img src="./assets/logo.svg" alt="Treine.me" />
+        <nav>
+          <ul>
+            <li>Home</li>
+            <li>Sobre</li>
+            <li>Treinar</li>
+          </ul>
+        </nav>
+      </header>
+      <main>
+        <section>
+          <h1>Treinos exclusivos para você!</h1>
+          <p>
+            Nós criamos treinos <strong>exclusivos e únicos para você.</strong>
+            <br />
+            Invista no seu corpo e
+            <strong>tenha muito mais performance</strong> e <br> qualidade de vida.
+          </p>
+          <button>
+            <img src="./assets/whats.svg" alt="Ícone do whatsapp">
+            Comece Já
+          </button>
+        </section>
+        <img src="./assets/img.png" alt="Um desenho de uma mulher pulando corda">
+      </main>
       <footer></footer>
     </div>
   </body>
