--- a/index.html
+++ b/index.html
@@ -1,40 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Treine.me</title>
   </head>
   <body>
     <div class="page">
-      <header>
-        <img src="./assets/logo.svg" alt="Treine.me" />
-        <nav>
-          <ul>
-            <li>Home</li>
-            <li>Sobre</li>
-            <li>Treinar</li>
-          </ul>
-        </nav>
-      </header>
+      <nav>
+        <a id="logo" href="#">
+          <img src="./assets/logo.svg" alt="Treine.me" />
+        </a>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Treinar</a></li>
+        </ul>
+      </nav>
+
       <main>
         <section>
-          <h1>Treinos exclusivos para você!</h1>
+          <h1>Treinos <span>exclusivos</span><br/> para você!</h1>
           <p>
             Nós criamos treinos <strong>exclusivos e únicos para você.</strong>
             <br />
             Invista no seu corpo e
-            <strong>tenha muito mais performance</strong> e <br> qualidade de vida.
+            <strong>tenha muito mais performance</strong> e <br />
+            qualidade de vida.
           </p>
+
           <button>
-            <img src="./assets/whats.svg" alt="Ícone do whatsapp">
+            <img src="./assets/whats.svg" alt="Ícone do whatsapp" />
             Comece Já
           </button>
         </section>
-        <img src="./assets/img.png" alt="Um desenho de uma mulher pulando corda">
+
+        <img
+          class="main-img"
+          src="./assets/img.png"
+          alt="Um desenho de uma mulher pulando corda"
+        />
       </main>
-      <footer></footer>
+
+      <footer>
+        <p>fale conosco no instagram</p>
+        <a href="https://instagram.com" target="_blank">@treine.me</a>
+      </footer>
+
+      <img
+        src="./assets/balls.svg"
+        alt="Bolinhas decorativas no canto direito inferior da tela"
+      />
     </div>
   </body>
 </html>
