--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       </footer>
 
       <img
+        id="balls"
         src="./assets/balls.svg"
         alt="Bolinhas decorativas no canto direito inferior da tela"
       />
